--- a/Final_Presentation.ipynb
+++ b/Final_Presentation.ipynb
@@ -47,7 +47,7 @@
      "text": [
       "<>:3: SyntaxWarning: invalid escape sequence '\\s'\n",
       "<>:3: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "C:\\Users\\EmmaBland\\AppData\\Local\\Temp\\ipykernel_33228\\1694450544.py:3: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\EmmaBland\\AppData\\Local\\Temp\\ipykernel_2328\\1694450544.py:3: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  df = pd.read_csv('housing.csv', sep = '\\s+', header = None, names = column_names)\n"
      ]
     },
@@ -459,17 +459,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 5.009296985570932\n",
-      "MAE: 1.725412670533913\n",
-      "R2: 0.8713619574315794\n",
-      "{'max_depth': 7, 'min_samples_leaf': 30}\n"
+      "MSE: 5.7146077378878815\n",
+      "MAE: 1.9002305070821948\n",
+      "R2: 0.8780490966447156\n",
+      "{'max_depth': 3, 'min_samples_leaf': 15}\n"
      ]
     }
    ],
@@ -479,7 +479,7 @@
     "y = df['MEDV']\n",
     "\n",
     "# Split data further into training and testing\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2, random_state=123)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2, random_state=12)\n",
     "\n",
     "# Create our model\n",
     "model = GradientBoostingRegressor()\n",
@@ -731,16 +731,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 8.863472329025589\n",
-      "MAE: 2.100218848288714\n",
-      "R2: 0.7871596646710483\n"
+      "MSE: 6.21420632196426\n",
+      "MAE: 1.8137568628094058\n",
+      "R2: 0.8516335386981123\n"
      ]
     }
    ],
@@ -748,7 +748,7 @@
     "# Split the dataset using our function\n",
     "X = X.reset_index(drop=True)\n",
     "y = y.reset_index(drop=True)\n",
-    "X_train, X_test, y_train, y_test = my_train_test_split(X,y,test_size=0.2, training_size=.8, random_state=123)\n",
+    "X_train, X_test, y_train, y_test = my_train_test_split(X,y,test_size=0.2, random_state=12)\n",
     "\n",
     "# Turn to np for now\n",
     "X_train_np = X_train.to_numpy()\n",
@@ -757,15 +757,15 @@
     "y_test_np = y_test.to_numpy()\n",
     "\n",
     "# Gradient Boost Regression \n",
-    "our_model = GradientBoostAll(n_estimators= 40, max_depth=3)\n",
+    "our_model = GradientBoostAll(n_estimators= 100, max_depth=5)\n",
     "# Fit the model\n",
     "our_model.fit(X_train_np, y_train_np)\n",
     "# Make the predictions\n",
-    "predictions = our_model.predict(X_test.to_numpy())\n",
+    "predictions = our_model.predict(X_test_np)\n",
     "# Prints Model Metrics\n",
-    "print(\"MSE:\", mean_squared_error(y_test, predictions))\n",
-    "print(\"MAE:\", mean_absolute_error(y_test, predictions))\n",
-    "print(\"R2:\", r2_score(y_test, predictions))"
+    "print(\"MSE:\", my_mse(y_test, predictions))\n",
+    "print(\"MAE:\", my_mae(y_test, predictions))\n",
+    "print(\"R2:\", my_r2(y_test, predictions))"
    ]
   }
  ],
