--- a/PCA.ipynb
+++ b/PCA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,9 +13,9 @@
     "from sklearn.decomposition import PCA # to apply PCA\n",
     "import seaborn as sns # to plot the heat maps\n",
     "import matplotlib.pyplot as plt\n",
-    "from JPM_Functions import outlier_removal, my_mae, my_mse, my_r2, my_train_test_split, DecisionTree, GradientBoostAll\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split\n"
+    "from JPM_Functions import outlier_removal, my_mae, my_mse, my_r2, my_train_test_split\n",
+    "from JPM_GradientBoostedTreeClasses import DecisionTree, GradientBoostAll\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
