--- a/PCA.ipynb
+++ b/PCA.ipynb
@@ -351,7 +351,7 @@
     "df = outlier_removal(df, \"MEDV\")\n",
     "print(df.info())\n",
     "df.reset_index(drop=True)\n",
-    "\n",
+    "# random stuff\n",
     "# Split into X and y\n",
     "df_x = df[['CRIM', 'ZN', 'INDUS', 'CHAS', 'NOX', 'RM', 'AGE', 'DIS', 'RAD', 'TAX', 'PTRATIO', 'B', 'LSTAT']]\n",
     "df_y = df['MEDV']\n",
