--- a/Final_Presentation.ipynb
+++ b/Final_Presentation.ipynb
@@ -4,7 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Introduction\n",
+    "\n",
+    "##### Should contain brief project, team, and task overview (how is project different to task?)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Task 3: EDA \n",
+    "\n",
+    "##### Introduction to task.\n",
+    "##### Domain knowledge and overview of data\n",
+    "##### Ethical Considerations\n",
     "\n",
     "#### The code below will take you through our initial data analysis and how we selected what preprocessing needed to be done before we performed gradient boosted tree regression. "
    ]
@@ -283,7 +296,7 @@
     "#### Conclusions: \n",
     "\n",
     "##### - MEDV has a strong correlation with...\n",
-    "##### - But we can see that *list features here* are strongly correlated, so we only need to use one\n",
+    "##### - But we can see that *list features here* are strongly correlated, so we only need to use...\n",
     "##### - Any other things we get from this figure"
    ]
   },
@@ -368,8 +381,8 @@
     "#### Conclusions:\n",
     "\n",
     "##### - When deciding what to do with outliers we need to look at our ML model. Gradient Boosted Regression Trees use thresholding on input features for decisions. This makes them less sensitive to high leverage points and outliers within the input features. \n",
-    "##### - However for the output feature, we're planning to use Mean Square Error to train the model. This will build on each previous tree's residuals, and since outliers have much larger residuals, this will disproportionately focus the model on these points. For this reason we need to get rid of the outliers on our target feature MEDV.\n",
-    "##### - Any other info on columns we discluded because of outliers. Is this a good part to bring up B and it's ethical issues? Or should that go under the data description? "
+    "##### - However for the output feature, Regression Trees uses variance as its cost function which is calculated with a sum of squares. This means that large outliers will appear to have even larger residuals, which will disproportionately focus the model on these points. For this reason we need to get rid of the outliers on our target feature MEDV. \n",
+    "##### - With all this in mind we also...   (Insert any other info on columns we discluded because of outliers here*)"
    ]
   },
   {
@@ -452,7 +465,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Summary: \n",
+    "\n",
+    "##### Summarize all conclusions and justifications drawn from EDA here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Task 1: Gradient Boosted Tree Regression with sklearn \n",
+    "\n",
+    "#### Introduction to task, high level definition on what graident boosted trees are\n",
+    "\n",
+    "#### Introduction to sklearn's model and its components (Decision Trees), hyperparameters we needed to consider, and any other coding specific additions we kept in mind.\n",
     "\n",
     "#### The code below will take you through our implementation with sklearn.  "
    ]
@@ -501,9 +527,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Summary:\n",
+    "\n",
+    "##### Summarize and justify our approach and findings (why we chose those values for hyperparameters, tuning process, etc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Task 2: Manually Implementing Gradient Boosted Tree Regression\n",
     "\n",
-    "### Custom Functions"
+    "##### Breakdown of our intial plan: Make a decision tree class, a gradient boosted class, and the other sklearn functions we needed. Include the breakdown across the team. \n",
+    "\n",
+    "### Custom Functions:"
    ]
   },
   {
@@ -610,7 +647,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Custom Classes"
+    "### Custom Classes:"
    ]
   },
   {
@@ -912,6 +949,39 @@
     "predictions = our_model.predict(X_test)\n",
     "# Prints Model Metrics\n",
     "my_performance(y_test, predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysis Between Task 2 and 3:\n",
+    "\n",
+    "##### Want to analyze the two performance indicators (Go back and save the values from the performance model so we can call them here)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Comparison "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion:\n",
+    "\n",
+    "##### Overall results\n",
+    "\n",
+    "##### Knowledge gained\n",
+    "\n",
+    "##### Areas for improvement\n",
+    "\n",
+    "##### Documentation, packacking, productionising code (ask Miri what this looks like, currently unsure, are we just linking to the github which has everything?)"
    ]
   }
  ],
