--- a/testing.ipynb
+++ b/testing.ipynb
@@ -831,6 +831,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = GradientBoostAll()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 147,
    "metadata": {},
    "outputs": [],
