Presentation Updates - Intro, Task 1, Task 2

--- a/Final_Presentation.ipynb
+++ b/Final_Presentation.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "##### Should contain brief project, team, and task overview (how is project different to task?)"
+    "##### Should contain brief project, team, and task overview (how is project different to task?)\n",
+    "##### This project will take the Boston Housing dataset and use it to predict the median value of owner-occupied homes. This goal will be broken down into three tasks:\n",
+    "##### - Task 1: Use sklearn to implement a gradient boosted trees model\n",
+    "##### - Task 2: Implement a gradient boosted trees model from scatch\n",
+    "##### - Task 3: Conduct EDA (explatory data analysis) to select the features and settings that perform best"
    ]
   },
   {
@@ -17,14 +21,17 @@
     "\n",
     "##### Introduction to task.\n",
     "##### Domain knowledge and overview of data\n",
-    "##### Ethical Considerations\n",
+    "##### Ethical Considerations: \n",
+    "##### - The B column refers to the proportion of black population by town.\n",
+    "##### - No other racial statistics are taken into account and this one was included because the authors assumed that racial self-segregation had a positive impact on house prices. \n",
+    "##### - This assumption is harmful and if this dataset was used by real-estate companies to predict and set actual housing prices, would lead to economic inequalities for people of color. \n",
     "\n",
     "#### The code below will take you through our initial data analysis and how we selected what preprocessing needed to be done before we performed gradient boosted tree regression. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +67,7 @@
      "text": [
       "<>:3: SyntaxWarning: invalid escape sequence '\\s'\n",
       "<>:3: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "C:\\Users\\EmmaBland\\AppData\\Local\\Temp\\ipykernel_23300\\1694450544.py:3: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\EmmaBland\\AppData\\Local\\Temp\\ipykernel_23300\\2788489501.py:3: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  df = pd.read_csv('housing.csv', sep = '\\s+', header = None, names = column_names)\n"
      ]
     },
@@ -207,7 +214,7 @@
        "4     18.7  396.90   5.33  36.2  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +483,11 @@
    "source": [
     "# Task 1: Gradient Boosted Tree Regression with sklearn \n",
     "\n",
-    "#### Introduction to task, high level definition on what graident boosted trees are\n",
+    "#### This task will cover the implementation of a gradient boosted tree ML model using the sklearn library, but first some background on what gradient boosted decision trees are:\n",
+    "\n",
+    "#### Decision Trees:\n",
+    "#### - A model made of decision and leaf nodes, where the decision nodes represents a threshold based on a feature, and leaf nodes are an endpoint. Decision nodes branch off into a split based on the feature. \n",
+    "#### - The ML proponent of this model is optimizing the best threshold to split the data on for each decision node. Which is done with a greedy method called Binary Recursive Partioning which in regression instances uses the weighted sum of variance across both child nodes as the cost function it's minimizing.\n",
     "\n",
     "#### Introduction to sklearn's model and its components (Decision Trees), hyperparameters we needed to consider, and any other coding specific additions we kept in mind.\n",
     "\n",
@@ -485,16 +496,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 5.7146077378878815\n",
-      "MAE: 1.900230507082195\n",
-      "R2: 0.8780490966447156\n",
+      "MSE: 5.714607737887884\n",
+      "MAE: 1.9002305070821948\n",
+      "R2: 0.8780490966447155\n",
       "{'max_depth': 3, 'min_samples_leaf': 15}\n"
      ]
     }
@@ -545,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +992,7 @@
     "\n",
     "##### Areas for improvement\n",
     "\n",
-    "##### Documentation, packacking, productionising code (ask Miri what this looks like, currently unsure, are we just linking to the github which has everything?)"
+    "##### All of our code is available in our GitHub Repository JPM-Team-Yang (link: https://github.com/emmabland/JPM-Team-Yang), and all of our custom functions and classes are in clean .py files ready for packaging with PyPi or other software. "
    ]
   }
  ],
