main commit (I think)

--- a/Final_Presentation.ipynb
+++ b/Final_Presentation.ipynb
@@ -876,143 +876,18 @@
     "            # Save our tree\n",
     "            self.trees.append(tree)\n",
     "            # Make prediction\n",
-    "            f_hat = tree.predict(X_train)\n",
+    "            f_hat_b = tree.predict(X_train)\n",
+    "            # Update f_hat\n",
+    "            self.f_hat += (self.learning_rate*f_hat_b) \n",
     "            # Update residuals\n",
-    "            residuals = residuals - (self.learning_rate*f_hat)\n",
-    "\n",
-    "    def predict(self, X_test: pd.DataFrame) -> np.ndarray:\n",
-    "        \"\"\"Uses trained Gradient Boosted Tree model to make predictions on data\n",
-    "\n",
-    "        Args:\n",
-    "            X_test (pd.DataFrame): Testing or actual data that predictions will be made on\n",
-    "\n",
-    "        Returns:\n",
-    "            y_hat (np.ndarray): Predictions made by trained model\n",
-    "        \"\"\"\n",
-    "        # Transform arg to numpy\n",
-    "        X_test = X_test.to_numpy()\n",
-    "        # Make sure class instance has been fit to data\n",
-    "        if not self.trees:\n",
-    "            raise ValueError(\"This instance of GradientBoostAll class hasn't been fit to data\")\n",
-    "        # Initialize prediction to be same length as input data\n",
+    "            residuals = residuals - (self.learning_rate*f_hat_b)\n",
+    "        return self\n",
+    "    \n",
+    "    def predict(self, X_test):\n",
     "        y_hat = np.zeros((X_test.shape[0], ))\n",
-    "        # Sum prediction from each tree\n",
     "        for tree in self.trees:\n",
     "            y_hat += self.learning_rate*tree.predict(X_test)\n",
-    "        return y_hat\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# K-fold Cross Validation to Optimize Hyperparameters\n",
-    "def kfold_cv(X_train, y_train, K_folds = 5, random_state = None, n_estimators: int = 25, max_depth: int = 1, learning_rate: int =.1):\n",
-    "    # Create empty lists for r2 and MSE scores\n",
-    "    r2_list = []\n",
-    "    mse_list = []\n",
-    "    np.random.seed(random_state) # Set random state for reproduceability\n",
-    "    indices = np.arange(len(X_train)) # Create list of indices from array length\n",
-    "    np.random.shuffle(indices) # Randomly shuffle indices\n",
-    "    fold_size = math.floor(len(X_train)/K_folds) # Set fold size as length/K\n",
-    "    for i in range(K_folds-1):\n",
-    "        # Create start- and end-points based of ith fold based on fold size (last fold is larger unless K evenly divides length)\n",
-    "        start = i * fold_size\n",
-    "        end = (i + 1) * fold_size if i < K_folds - 1 else len(X_train)\n",
-    "        # Set test indices as those within range of start- and end-points, train indices as those outside range\n",
-    "        test_indices = indices[start:end] \n",
-    "        train_indices = np.concatenate((indices[:start], indices[end:]))\n",
-    "        # Create new train and test sets from original X_train and y_train using train and test indices\n",
-    "        X_train_fold = X_train.iloc[train_indices]\n",
-    "        X_test_fold = X_train.iloc[test_indices]\n",
-    "        y_train_fold = y_train.iloc[train_indices]\n",
-    "        y_test_fold = y_train.iloc[test_indices]\n",
-    "        # Initalize gradient boosting model using parameters specified in function call\n",
-    "        model = GradientBoostAll(n_estimators= n_estimators, max_depth=max_depth, learning_rate=learning_rate)\n",
-    "        # Fit model on fold training data\n",
-    "        model.fit(X_train_fold, y_train_fold) \n",
-    "        # Model makes predictions based on fold X_test\n",
-    "        y_pred_fold = model.predict(X_test_fold)\n",
-    "        # r2 score added to list\n",
-    "        r2_list.append(my_r2(y_test_fold, y_pred_fold))\n",
-    "        # MSE added to list\n",
-    "        mse_list.append(my_mse(y_test_fold, y_pred_fold))\n",
-    "    return np.mean(r2_list), np.mean(mse_list) # returns average r2 and MSE scores across all folds\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.6194592366363394, 15.791434663676835)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kfold_cv(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean Squared Error: 6.3043795087040895\n",
-      "Root Mean Squared Error: 2.510852347053504\n",
-      "Mean Absolute Error: 1.7633820890697622\n",
-      "R2 Score: 0.8494806207021945\n"
-     ]
-    }
-   ],
-   "source": [
-    "def grid_search_kf(X_train, y_train, X_test, y_test, param_grid, random_seed=None, K_folds = 5):\n",
-    "    # Create best score metric (to be beaten) and best parameter dictionary\n",
-    "    best_score = float('inf')\n",
-    "    best_params = {}\n",
-    "\n",
-    "    # For every combination of parameters in parameter grid, this will perform K-fold cross validation \n",
-    "    for n_estimators in param_grid['n_estimators']:\n",
-    "        for max_depth in param_grid['max_depth']:\n",
-    "            for learning_rate in param_grid['learning_rate']:\n",
-    "                # Gets average r2, average MSE from k-fold cross validation on training data with this combination of hyperparameters\n",
-    "                r2, score = kfold_cv(X_train, y_train, n_estimators=n_estimators, max_depth=max_depth, learning_rate=learning_rate, random_state=random_seed, K_folds=K_folds)\n",
-    "                # If this MSE is better (lower) than the previous best, replace the existing best score and best parameters with these\n",
-    "                if score < best_score:\n",
-    "                    best_score = score\n",
-    "                    best_params = {'n_estimators': n_estimators, 'max_depth': max_depth, 'learning_rate': learning_rate}\n",
-    "\n",
-    "    # Initialize gradient boosting model with best parameters\n",
-    "    model = GradientBoostAll(n_estimators=best_params['n_estimators'], max_depth=best_params['max_depth'], learning_rate=best_params['learning_rate'])\n",
-    "    # Fit model on training data\n",
-    "    model.fit(X_train, y_train)\n",
-    "    # Model makes prediction based on test data\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    return my_performance(y_test, y_pred) # Return performance metrics checked against y_test\n",
-    "\n",
-    "# Execute grid search\n",
-    "param_grid = {\n",
-    "    'n_estimators': [10, 20, 50, 100],\n",
-    "    'max_depth': [1, 2, 3, 4],\n",
-    "    'learning_rate': [0.01, 0.1, 0.2, 0.5]\n",
-    "}\n",
-    "\n",
-    "# Assuming X_train, y_train, X_test, and y_test are already defined\n",
-    "grid_search_kf(X_train, y_train, X_test, y_test, param_grid)"
+    "        return y_hat"
    ]
   },
   {
@@ -1024,17 +899,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 6.214206321964261\n",
-      "Root Mean Squared Error: 2.492830985438897\n",
-      "Mean Absolute Error: 1.8137568628094065\n",
-      "R2 Score: 0.8516335386981123\n"
+      "MSE: 8.863472329025589\n",
+      "MAE: 2.100218848288714\n",
+      "R2: 0.7871596646710483\n"
      ]
     }
    ],
