--- a/testing.ipynb
+++ b/testing.ipynb
@@ -733,31 +733,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# K-fold Cross Validation function to perform hyperparameter tuning \n",
     "def kfold_cv(X_train, y_train, K_folds = 5, random_state = None, n_estimators: int = 25, max_depth: int = 1, learning_rate: int =.1):\n",
+    "    # Create empty lists for r2 and MSE scores\n",
     "    r2_list = []\n",
     "    mse_list = []\n",
+    "    # Set random seed for reproduceability\n",
     "    np.random.seed(random_state)\n",
+    "    # Create list of indices as length of data\n",
     "    indices = np.arange(len(X_train))\n",
+    "    # Shuffle indices\n",
     "    np.random.shuffle(indices)\n",
+    "    # Create fold size as length/K\n",
     "    fold_size = math.floor(len(X_train)/K_folds)\n",
     "    for i in range(K_folds-1):\n",
+    "        # Create start- and end-points for this fold (final fold will be larger if K does not evenly divide length)\n",
     "        start = i * fold_size\n",
     "        end = (i + 1) * fold_size if i < K_folds - 1 else len(X_train)\n",
+    "        # Assign test indices as those within start- and end-points, train indices as those outside this range\n",
     "        test_indices = indices[start:end]\n",
     "        train_indices = np.concatenate((indices[:start], indices[end:]))\n",
+    "        # Create new train and test sets from existing training set based on train and test indices\n",
     "        X_train_fold = X_train.iloc[train_indices]\n",
     "        X_test_fold = X_train.iloc[test_indices]\n",
     "        y_train_fold = y_train.iloc[train_indices]\n",
     "        y_test_fold = y_train.iloc[test_indices]\n",
+    "        # Initialize model with hyperparameters to match function input parameters\n",
     "        model = GradientBoostAll(n_estimators= n_estimators, max_depth=max_depth, learning_rate=learning_rate)\n",
-    "        X_train_fold_np = np.asarray(X_train_fold)\n",
-    "        X_test_fold_np = np.asarray(X_test_fold)\n",
-    "        y_train_fold_np = np.asarray(y_train_fold)\n",
-    "        y_test_fold_np = np.asarray(y_test_fold)\n",
-    "        model.fit(X_train_fold_np, y_train_fold_np)\n",
-    "        y_pred_fold = model.predict(X_test_fold_np)\n",
-    "        r2_list.append(my_r2(y_test_fold_np, y_pred_fold))\n",
-    "        mse_list.append(my_mse(y_test_fold_np, y_pred_fold))\n",
+    "        # Fit model on fold training data\n",
+    "        model.fit(X_train_fold, y_train_fold)\n",
+    "        # Model predicts fold test data\n",
+    "        y_pred_fold = model.predict(X_test_fold)\n",
+    "        # r2 and MSE scores appended to list\n",
+    "        r2_list.append(my_r2(y_test_fold, y_pred_fold))\n",
+    "        mse_list.append(my_mse(y_test_fold, y_pred_fold))\n",
+    "    # Returns average r2 and average MSE across all folds\n",
     "    return np.mean(r2_list), np.mean(mse_list)\n",
     "\n"
    ]
@@ -800,23 +810,30 @@
    ],
    "source": [
     "\n",
-    "\n",
+    "# Perform grid search using K-fold cross validation to optimize hyperparameters\n",
     "def grid_search_kf(X_train, y_train, X_test, y_test, param_grid, random_seed=None, K_folds = 5):\n",
+    "    # Create best score and best parameter variables - best score starts as infinity so any real-valued score will be better (lower)\n",
     "    best_score = float('inf')\n",
     "    best_params = {}\n",
     "\n",
+    "    # For every combination of parameters in the parameter grid:\n",
     "    for n_estimators in param_grid['n_estimators']:\n",
     "        for max_depth in param_grid['max_depth']:\n",
     "            for learning_rate in param_grid['learning_rate']:\n",
+    "                # get r2 and MSE from K-fold function tuned to this combination of hyperparameters\n",
     "                r2, score = kfold_cv(X_train, y_train, n_estimators=n_estimators, max_depth=max_depth, learning_rate=learning_rate, random_state=random_seed, K_folds=K_folds)\n",
+    "                # If MSE is better than best_score, replace best_score with this score and existing best_params with these\n",
     "                if score < best_score:\n",
     "                    best_score = score\n",
     "                    best_params = {'n_estimators': n_estimators, 'max_depth': max_depth, 'learning_rate': learning_rate}\n",
-    "\n",
+    "    # Initialize model with best parameters\n",
     "    model = GradientBoostAll(n_estimators=best_params['n_estimators'], max_depth=best_params['max_depth'], learning_rate=best_params['learning_rate'])\n",
-    "    model.fit(np.asarray(X_train), np.asarray(y_train))\n",
-    "    y_pred = model.predict(np.asarray(X_test))\n",
-    "    return my_performance(np.asarray(y_test), y_pred)\n",
+    "    # Fit model on training data\n",
+    "    model.fit(X_train, y_train)\n",
+    "    # Model predicts test data\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    # Returns performance metrics from prediction \n",
+    "    return my_performance(y_test, y_pred)\n",
     "\n",
     "# Execute grid search\n",
     "param_grid = {\n",
