updating kfolds, gscv, rstesting

--- a/Final_Presentation.ipynb
+++ b/Final_Presentation.ipynb
@@ -962,6 +962,94 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# K-fold Cross Validation function to perform hyperparameter tuning \n",
+    "def kfold_cv(X_train, y_train, K_folds = 5, random_state = None, n_estimators: int = 25, max_depth: int = 1, learning_rate: int =.1):\n",
+    "    # Create empty lists for r2 and MSE scores\n",
+    "    r2_list = []\n",
+    "    mse_list = []\n",
+    "    # Set random seed for reproduceability\n",
+    "    np.random.seed(random_state)\n",
+    "    # Create list of indices as length of data\n",
+    "    indices = np.arange(len(X_train))\n",
+    "    # Shuffle indices\n",
+    "    np.random.shuffle(indices)\n",
+    "    # Create fold size as length/K\n",
+    "    fold_size = math.floor(len(X_train)/K_folds)\n",
+    "    for i in range(K_folds-1):\n",
+    "        # Create start- and end-points for this fold (final fold will be larger if K does not evenly divide length)\n",
+    "        start = i * fold_size\n",
+    "        end = (i + 1) * fold_size if i < K_folds - 1 else len(X_train)\n",
+    "        # Assign test indices as those within start- and end-points, train indices as those outside this range\n",
+    "        test_indices = indices[start:end]\n",
+    "        train_indices = np.concatenate((indices[:start], indices[end:]))\n",
+    "        # Create new train and test sets from existing training set based on train and test indices\n",
+    "        X_train_fold = X_train.iloc[train_indices]\n",
+    "        X_test_fold = X_train.iloc[test_indices]\n",
+    "        y_train_fold = y_train.iloc[train_indices]\n",
+    "        y_test_fold = y_train.iloc[test_indices]\n",
+    "        # Initialize model with hyperparameters to match function input parameters\n",
+    "        model = GradientBoostAll(n_estimators= n_estimators, max_depth=max_depth, learning_rate=learning_rate)\n",
+    "        # Fit model on fold training data\n",
+    "        model.fit(X_train_fold, y_train_fold)\n",
+    "        # Model predicts fold test data\n",
+    "        y_pred_fold = model.predict(X_test_fold)\n",
+    "        # r2 and MSE scores appended to list\n",
+    "        r2_list.append(my_r2(y_test_fold, y_pred_fold))\n",
+    "        mse_list.append(my_mse(y_test_fold, y_pred_fold))\n",
+    "    # Returns average r2 and average MSE across all folds\n",
+    "    return np.mean(r2_list), np.mean(mse_list)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Perform grid search using K-fold cross validation to optimize hyperparameters\n",
+    "def grid_search_kf(X_train, y_train, X_test, y_test, param_grid, random_seed=None, K_folds = 5):\n",
+    "    # Create best score and best parameter variables - best score starts as infinity so any real-valued score will be better (lower)\n",
+    "    best_score = float('inf')\n",
+    "    best_params = {}\n",
+    "\n",
+    "    # For every combination of parameters in the parameter grid:\n",
+    "    for n_estimators in param_grid['n_estimators']:\n",
+    "        for max_depth in param_grid['max_depth']:\n",
+    "            for learning_rate in param_grid['learning_rate']:\n",
+    "                # get r2 and MSE from K-fold function tuned to this combination of hyperparameters\n",
+    "                r2, score = kfold_cv(X_train, y_train, n_estimators=n_estimators, max_depth=max_depth, learning_rate=learning_rate, random_state=random_seed, K_folds=K_folds)\n",
+    "                # If MSE is better than best_score, replace best_score with this score and existing best_params with these\n",
+    "                if score < best_score:\n",
+    "                    best_score = score\n",
+    "                    best_params = {'n_estimators': n_estimators, 'max_depth': max_depth, 'learning_rate': learning_rate}\n",
+    "    # Initialize model with best parameters\n",
+    "    model = GradientBoostAll(n_estimators=best_params['n_estimators'], max_depth=best_params['max_depth'], learning_rate=best_params['learning_rate'])\n",
+    "    # Fit model on training data\n",
+    "    model.fit(X_train, y_train)\n",
+    "    # Model predicts test data\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    # Returns performance metrics from prediction \n",
+    "    return my_performance(y_test, y_pred)\n",
+    "\n",
+    "# Execute grid search\n",
+    "param_grid = {\n",
+    "    'n_estimators': [10, 20, 50, 100],\n",
+    "    'max_depth': [1, 2, 3, 4],\n",
+    "    'learning_rate': [0.01, 0.1, 0.2, 0.5]\n",
+    "}\n",
+    "\n",
+    "# Assuming X_train, y_train, X_test, and y_test are already defined\n",
+    "grid_search_kf(X_train, y_train, X_test, y_test, param_grid)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -972,11 +1060,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sklearn r2: 0.8242478883865034\n",
+      "sklearn MSE: 6.875039373986575\n",
+      "our r2: 0.8221374636448178\n",
+      "our MSE: 6.959123054091391\n"
+     ]
+    }
+   ],
    "source": [
-    "# Comparison "
+    "# Comparison \n",
+    "def random_state_tester(rs_start = 0, rs_end = 10, sk_min_samples_leaf = 1, sk_max_depth = 3, our_max_depth = 3, our_learning_rate = 0.1, our_n_estimators = 100):\n",
+    "    # Initialize lists for sklearn's and our r2 and MSE scores\n",
+    "    sk_r2 = []\n",
+    "    our_r2 = []\n",
+    "    sk_mse = []\n",
+    "    our_mse = []\n",
+    "    for i in range(rs_start, rs_end): \n",
+    "        # Perform train-test-split on specific random state (sklearn train-test-split used for reproduceability across machines)\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=i)\n",
+    "        # sklearn model initalized with parameters to match function inputs \n",
+    "        sk_model = GradientBoostingRegressor(min_samples_leaf= sk_min_samples_leaf, max_depth=sk_max_depth)\n",
+    "        sk_model.fit(X_train, y_train)  # sklearn model fit on training data\n",
+    "        sk_y_pred = sk_model.predict(X_test) # sklearn model predicts from X_test\n",
+    "        sk_r2.append(r2_score(y_test, sk_y_pred)) # sklearn r2 score added to list\n",
+    "        sk_mse.append(mean_squared_error(y_test, sk_y_pred)) # sklearn MSE score added to list\n",
+    "        # our model initalized with parameters to match function inputs\n",
+    "        our_model = GradientBoostAll(max_depth=our_max_depth, learning_rate=our_learning_rate, n_estimators=our_n_estimators)\n",
+    "        our_model.fit((X_train), (y_train)) #our model fit on training data\n",
+    "        our_y_pred = our_model.predict((X_test)) #our model predicts from X_test\n",
+    "        our_r2.append(my_r2((y_test), our_y_pred)) #our r2 score added to list\n",
+    "        our_mse.append(my_mse((y_test), our_y_pred)) #our MSE added to list\n",
+    "    print(f'sklearn r2: {np.mean(sk_r2)}') # sklearn model's average r2\n",
+    "    print(f'sklearn MSE: {np.mean(sk_mse)}') # sklearn model's average MSE\n",
+    "    print(f'our r2: {np.mean(our_r2)}') # our model's average r2\n",
+    "    print(f'our MSE: {np.mean(our_mse)}') # our model's average MSE\n",
+    "\n",
+    "\n",
+    "random_state_tester(0,25)"
    ]
   },
   {
