find_best_split

--- a/Final_Presentation.ipynb
+++ b/Final_Presentation.ipynb
@@ -753,29 +753,16 @@
     "            mean: Mean of the output training data sorted to this node. \n",
     "        \"\"\"\n",
     "        return np.mean(y)\n",
-    "\n",
-    "    def _find_best_split(self, X: np.ndarray, y: np.ndarray, num_samples: int, num_features: int) -> int | float:\n",
-    "        \"\"\"Finds the best feature and threshold to split on based \n",
-    "        on the lowest mean square error (MSE).\n",
-    "\n",
-    "        Args:\n",
-    "            X (np.ndarray): Input (features) training data sorted to this decision node.\n",
-    "            y (np.ndarray): Output (observations) training data sorted to this decision node\n",
-    "            num_samples (int): Number of rows in X\n",
-    "            num_features (int): Number of columns in X\n",
-    "\n",
-    "        Returns:\n",
-    "            best_feature (int): The best feature for node to split on\n",
-    "            best_threshold (float): The best threshold of the best_feature for node to split on\n",
-    "        \"\"\"\n",
-    "        # Initialize variables\n",
+    "    \n",
+    "    def _find_best_split(self, X, y, num_samples, num_features):\n",
+    "        # Finds the best feature and threshold to split on based on the lowest MSE\n",
     "        best_feature, best_threshold = None, None\n",
     "        best_mse = np.inf\n",
-    "        # Loops through every feature (column) of X\n",
     "        for feature_index in range(num_features):\n",
-    "            # Array of potential thresholds to split data on\n",
-    "            thresholds = np.unique(X[:, feature_index])\n",
-    "            # Calculate the MSE for the split of every potential threshold\n",
+    "            sorted_feature_values = np.sort(X[:, feature_index])\n",
+    "            # Creates a possible threshold as the midpoint of each consecutive pair of ordered feature values\n",
+    "            thresholds = [(sorted_feature_values[i] + sorted_feature_values[i+1]) / 2 for i in range(num_samples - 1)]\n",
+    "            # Splits the dataset and calculates the MSE for this split\n",
     "            for threshold in thresholds:\n",
     "                left_idxs, right_idxs = self._split(X[:, feature_index], threshold)\n",
     "                if len(left_idxs) == 0 or len(right_idxs) == 0:\n",
